<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    android:background="@drawable/bg_dialog"
    android:minWidth="300dp"
    android:padding="15dp"
    tools:background="@color/gray_dark">


    <TextView
        android:id="@+id/tvTitleDialog"
        android:textSize="19sp"
        android:textStyle="bold"
        android:text="@string/track_data_create_title"
        android:textColor="?colorOnSecondary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <ImageButton
        android:id="@+id/btnClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:src="@drawable/ic_baseline_close_24"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitleType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/track_data_create_title_type"
        android:textColor="?colorOnSecondary"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitleDialog" />

    <Spinner
        android:id="@+id/spinnerType"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        android:background="@drawable/bg_field"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitleType"
        tools:entries="@array/test_spinner_items" />


    <TextView
        android:id="@+id/tvTitleData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/track_data_create_title_data"
        android:textColor="?colorOnSecondary"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinnerType" />

    <EditText
        android:id="@+id/inputData"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:textSize="15sp"
        android:padding="5dp"
        android:textCursorDrawable="@null"
        android:cursorVisible="true"
        android:background="@drawable/bg_field"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitleData" />

    <Button
        android:id="@+id/btnSend"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:drawablePadding="5dp"
        android:text="@string/track_data_create_btn_add"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputData" />

</androidx.constraintlayout.widget.ConstraintLayout>