<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorGlobalBackground">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?colorPrimaryVariant"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/settings_master_title"
        app:titleTextColor="?colorOnPrimary" />

    <LinearLayout
        android:id="@+id/containerBoxes"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/toolbar">


        <LinearLayout
            android:id="@+id/containerToken"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/bg_list"
            android:clickable="true"
            android:foreground="@drawable/bg_ripple_list"
            android:longClickable="true"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/tvTitleToken"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_master_title_token"
                android:textColor="@color/super_white"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tvDataToken"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:maxLines="1"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:scrollbars="horizontal"
                android:textSize="15sp"
                tools:text="dsasdaldsaklkdsalklsadklsadkl" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/bg_list"
            android:foreground="@drawable/bg_ripple_list"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/tvTitleAbout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_master_title_app_info"
                android:textColor="@color/super_white"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tvDataAbout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:maxLines="1"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:scrollbars="horizontal"
                android:textSize="15sp"
                tools:text="Версия 1.0" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tvConsent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="12dp"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="3"
        android:text="@string/settings_master_consent"
        android:textColor="@color/white"
        android:textColorLink="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/containerBoxes"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
